# myApplication

./: local.properties
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  cmake_install.cmake  native-lib.cpp  test.cpp
app/src/main/cpp/NFIQ_2/NFIQ2/NFIQ2Algorithm/include/: nfiq2.hpp  nfiq2_algorithm.hpp  nfiq2_constants.hpp  nfiq2_data.hpp  nfiq2_fingerprintimagedata.hpp  nfiq2_qualityfeatures.hpp
app/src/main/cpp/NFIQ_2/NFIQ2/NFIQ2Algorithm/src/nfiq2/: nfiq2_algorithm.cpp
app/src/main/cpp/NFIQ_2/NFIR/include/: nfir_lib.h  resample_down.h
app/src/main/cpp/NFIQ_2/opencv/modules/gapi/src/backends/plaidml/: gplaidmlcore.cpp
app/src/main/cpp/OpenCV-prefix/tmp/: OpenCV-cfgcmd.txt
app/src/main/cpp/hello_world/: CMakeLists.txt  hello_world.cpp  hello_world.hpp
app/src/main/cpp/libbiomeval-prefix/tmp/: libbiomeval-cfgcmd.txt
app/src/main/cpp/nfiq2-prefix/tmp/: nfiq2-cfgcmd.txt
app/src/main/cpp/nfiq2api-prefix/tmp/: nfiq2api-cfgcmd.txt
app/src/main/cpp/nfir-prefix/tmp/: nfir-cfgcmd.txt
app/src/main/java/com/example/myapplication/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
